# Indoor-Navi

./: .gitignore  README.md
IndoorNavi/: CMakeLists.txt  ConnectionHandler.h  FileHandler.h  ScanHandler.h  blescan.c  data_connection.h  database_final.txt  main.c
IndoorNavi/Debug/: FileHandler.d  IndoorNavi  Odometrie.d  ScanHandler.d  blescan.d  data_connection.d  iwlib.d  main.d  makefile  objects.mk  point.d  sources.mk  subdir.mk  wlanscan.d
IndoorNavi/Debug/bus_component/: bus_handler.d  subdir.mk
IndoorNavi/exports/: database_ble.txt
IndoorNavi/include/: CMakeLists.txt  FileHandler.h  Odometrie.h  ScanHandler.h  blescan.h  data_connection.h  wlanscan.c  wlanscan.h
IndoorNavi/src/: .wlanscan.c.swp  CMakeLists.txt  ConnectionHandler.h  FileHandler.c  Odometrie.c  Odometrie.h  ScanHandler.c  ScanHandler.h  blescan.c  data_connection.c  main.c  wlanscan.c
Matlab_Server/: Server_Sample.m  test.txt
